--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         
         .nav-unified {
             position: relative;
-            padding: 1rem 2rem;
+            padding: 1rem 1rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 0;
         }
 
         .nav-links {
