Further updates to HTML files and tennis quiz features

--- a/head-to-head-masters.html
+++ b/head-to-head-masters.html
@@ -27,6 +27,16 @@
     <link rel="canonical" href="https://tennis-quiz.com/head-to-head-masters.html">
     
     <link rel="icon" type="image/png" href="images/logo-tennis-quiz.png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7D5439VQZL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7D5439VQZL');
+    </script>
     <style>
         * {
             margin: 0;
@@ -618,7 +628,7 @@
             <div class="header">
                 <h1>🥊 Head-to-Head Masters</h1>
                 <p>Test your knowledge of tennis's greatest rivalries!</p>
-                <p style="font-size: 0.9em; opacity: 0.8; margin-top: 0.5rem;">From Big 3 battles to classic era showdowns</p>
+                <p style="font-size: 0.9em; opacity: 0.8; margin-top: 0.5rem;"> 📆 ❗️ Important: Data available only up to end of 2024</p>
             </div>
 
             <div class="game-content">
