--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo-tennis-quiz.png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7D5439VQZL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7D5439VQZL');
+    </script>
     <link rel="apple-touch-icon" sizes="180x180" href="images/logo-tennis-quiz.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
