--- a/tennis-tier-list.html
+++ b/tennis-tier-list.html
@@ -27,6 +27,16 @@
     <link rel="canonical" href="https://tennis-quiz.com/tennis-tier-list.html">
     
     <link rel="icon" type="image/png" href="images/logo-tennis-quiz.png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7D5439VQZL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7D5439VQZL');
+    </script>
     <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
