--- a/guess-player-performance-timeline.html
+++ b/guess-player-performance-timeline.html
@@ -27,6 +27,16 @@
     <link rel="canonical" href="https://tennis-quiz.com/guess-player-performance-timeline.html">
     
     <link rel="icon" type="image/png" href="images/logo-tennis-quiz.png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7D5439VQZL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7D5439VQZL');
+    </script>
     <style>
         * {
             margin: 0;
