Add tennis trivia grid game and update all quiz pages with latest features

--- a/tennis-web.html
+++ b/tennis-web.html
@@ -1530,6 +1530,16 @@
                     </div>
                     <span class="play-button-responsive" style="background: rgba(255,255,255,0.2); color: white; padding: 0.5rem 1rem; border-radius: 8px; font-weight: 600; font-size: 0.9rem;">Play</span>
                 </a>
+
+                <!-- Tennis Trivia Grid -->
+                <a href="tennis-trivia-grid.html" class="game-card-responsive" style="padding: 1rem; background: linear-gradient(145deg, #5f27cd, #341f97); border-radius: 12px; text-decoration: none; transition: transform 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">
+                    <img src="images/grid.png" alt="Tennis Trivia Grid" style="width: 64px; height: 64px; object-fit: cover; border-radius: 8px;">
+                    <div style="flex: 1;">
+                        <h3 style="color: white; font-size: 1.1rem; font-weight: bold; margin-bottom: 0.25rem;">🎲 Tennis Trivia Grid</h3>
+                        <p style="color: rgba(255,255,255,0.8); font-size: 0.9rem;">Fill the 3x3 grid with players matching row and column criteria</p>
+                    </div>
+                    <span class="play-button-responsive" style="background: rgba(255,255,255,0.2); color: white; padding: 0.5rem 1rem; border-radius: 8px; font-weight: 600; font-size: 0.9rem;">Play</span>
+                </a>
             </div>
         </div>
     </div>
