--- a/index.html
+++ b/index.html
@@ -385,30 +385,13 @@
                     </div>
                 </a>
 
-                <div class="game-card rounded-xl p-6 block flex items-center gap-6" style="background: linear-gradient(145deg, #667eea, #764ba2); opacity: 0.7;">
-                    <div class="flex-shrink-0">
-                        <img src="images/6-deg.png" alt="Tennis Web" class="w-20 h-20 object-cover rounded-lg">
-                    </div>
-                    <div class="flex-1 flex flex-col justify-center">
-                        <h3 class="text-xl font-bold text-white mb-2">🕸️ Tennis Web</h3>
-                        <p class="text-white/80 text-sm mb-4">
-                            Connect tennis players through 6 degrees of separation
-                        </p>
-                        <div>
-                            <span class="bg-white/20 text-white px-4 py-2 rounded-lg inline-block font-semibold backdrop-blur-sm">
-                                Coming Soon
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Tennis Trivia Grid -->
                 <a href="tennis-trivia-grid.html" class="game-card rounded-xl p-6 block flex items-center gap-6" style="background: linear-gradient(145deg, #5f27cd, #341f97);">
                     <div class="flex-shrink-0">
-                        <img src="images/logo-tennis-quiz.png" alt="Tennis Trivia Grid" class="w-20 h-20 object-cover rounded-lg">
+                        <img src="images/grid.png" alt="Tennis Trivia Grid" class="w-20 h-20 object-cover rounded-lg">
                     </div>
                     <div class="flex-1 flex flex-col justify-center">
-                        <h3 class="text-xl font-bold text-white mb-2">🎲 Tennis Trivia Grid</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Tennis Trivia Grid</h3>
                         <p class="text-white/80 text-sm mb-4">
                             Fill the 3x3 grid with players matching row and column criteria
                         </p>
@@ -419,6 +402,23 @@
                         </div>
                     </div>
                 </a>
+
+                <div class="game-card rounded-xl p-6 block flex items-center gap-6" style="background: linear-gradient(145deg, #667eea, #764ba2); opacity: 0.7;">
+                    <div class="flex-shrink-0">
+                        <img src="images/6-deg.png" alt="Tennis Web" class="w-20 h-20 object-cover rounded-lg">
+                    </div>
+                    <div class="flex-1 flex flex-col justify-center">
+                        <h3 class="text-xl font-bold text-white mb-2">Tennis Web</h3>
+                        <p class="text-white/80 text-sm mb-4">
+                            Connect tennis players through 6 degrees of separation
+                        </p>
+                        <div>
+                            <span class="bg-white/20 text-white px-4 py-2 rounded-lg inline-block font-semibold backdrop-blur-sm">
+                                Coming Soon
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- How to Play Section -->
